# torchexpo

./: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question-or-help-wanted.md
.github/workflows/: ci.yaml  models.yaml
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle
data/: README.md
data/tags/: datasets.yaml  languages.yaml  licenses.yaml  tasks.yaml
docs/: requirements.txt
docs/source/: conf.py  faq.rst  get_started.rst  governance.rst  index.rst  persons_of_interest.rst
examples/: torchscript.py
ios/: README.md
scripts/: download_model_assets.sh  example.py  validate_models.py
scripts/conda/: conda_upload.sh  meta.yaml
tests/: __init__.py  not_test_image_classification.py  test_image_classification.py  test_image_segmentation.py  test_object_detection.py  test_sentiment_analysis.py  test_torchexpo.py
tests/model/: test_model.py
torchexpo/: __init__.py  torchexpo.py  version.py
torchexpo/core/: __init__.py  torchexpo.py
torchexpo/model/: __init__.py  base_model.py  model.py  utils.py
torchexpo/modules/: __init__.py  image_classification.py  image_segmentation.py  imageclassification.py  imagesegmentation.py  sentiment_analysis.py  torchexpo.py
torchexpo/nlp/: __init__.py
torchexpo/tasks/: __init__.py  base_task.py  tasks.py
torchexpo/vision/: __init__.py
(+265 files in other folders)
